fix horizontal scroll

--- a/css/speranta_webpage-style.css
+++ b/css/speranta_webpage-style.css
@@ -5,7 +5,6 @@ body {
   html,
   body {
     height: 100%;
-      overflow-x: hidden;
       background: rgba(5.625731690074459,3.238877368272222,13.616504854368927, 1);
   }
 
@@ -19,6 +18,15 @@ body {
 
   a {
     text-decoration: none;
+  }
+
+  .render {
+    color: white;
+    font-size: 16px;
+    margin: 0 auto;
+    position: relative;
+    height: 100%;
+    overflow-x: hidden;
   }
 
   .back-button {
